--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,7 @@ body{
 .description{
     font-size: 1.5rem;
     margin-bottom: 20px;
+    text-align: center;
 }
 
 .button a{
@@ -78,6 +79,7 @@ body{
     }
     .description{
         font-size: 1rem;
+        text-align: center;
     }
     
     .button a{
